--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       "src": "vercel_build.sh",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "ui/staticfiles"
+        "distDir": "staticfiles"
       }
     }
   ],
@@ -24,5 +24,5 @@
       "dest": "sifra/wsgi.py"
     }
   ],
-  "outputDirectory": "ui/staticfiles"
+  "outputDirectory": "staticfiles"
 }
